--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,11 @@
 # ASP.NET Core (.NET Framework)
+- task: AzureFunctionApp@1
+  inputs:
+    azureSubscription: 'azureDevOpsTest-hkb - Azure'
+    appType: 'functionApp'
+    appName: 'FunctionAppAzureDevOpsTest'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    deploymentMethod: 'auto'
 # Build and test ASP.NET Core projects targeting the full .NET Framework.
 # Add steps that publish symbols, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
