Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ steps:
   inputs:
     appType: 'functionApp'
     appName: 'FunctionAppAzureDevOpsTest'
-    azureSubscription: 'Visual Studio Enterprise – MPN'
+    azureSubscription: 'Visual Studio Enterprise – MPN(61c6236b-0f94-47ae-842e-9f665b39de34)'
     deployToSlotOrASE: true
     resourceGroupName: 'azureDevOpsTest-hkb-rg'
     slotName: 'production'
